<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyAndroidAppActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	
    <string name="chk_ios">IPhone</string>
    <string name="chk_android">Android</string>
    <string name="chk_windows">Windows Mobile</string>
    <string name="btn_display">Display</string>
    <string name="hb">hbtry</string>
    
</resources>